<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_action_ba">ActionBaActivity</string>
    <string name="font_size">字体大小</string>
    <string name="font_10">10号</string>
    <string name="font_12">12号</string>
    <string name="font_14">14号</string>
    <string name="font_16">16号</string>
    <string name="font_18">18号</string>
    <string name="plain_item">简单菜单</string>
    <string name="font_color">字体颜色</string>
    <string name="font_color_red">红色</string>
    <string name="font_color_blue">蓝色</string>
    <string name="menu_setting">setting</string>
    <string name="first">首页</string>
    <string name="last">末页</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="title_activity_fragment_pager_adapter">FragmentPagerAdapter</string>
    <string name="title_activity_action_bar_click">ActionBarClickActivity</string>
</resources>
